[package]
name = "choreo-cli"
version = "2025.0.2"
edition = "2021"
homepage = "https://github.com/SleipnirGroup/Choreo"
repository = "https://github.com/SleipnirGroup/Choreo.git"
authors = ["Sleipnir Group"]
license = "BSD-3-Clause"

[dependencies]
choreo-core = { path = "../src-core" }
clap = { version = "4.5.25", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["ansi", "fmt", "std", "json"] }
