[package]
name = "choreo-core"
version = "2025.0.0-beta.9"
edition = "2021"
homepage = "https://github.com/SleipnirGroup/Choreo"
repository = "https://github.com/SleipnirGroup/Choreo.git"
authors = ["Sleipnir Group"]
license = "BSD-3-Clause"

[dependencies]
dashmap = "6.1.0"
fastrand = "2.2.0"
futures-util = "0.3.31"
indexmap = { version = "2.7.0", features = ["serde"] }
ipc-channel = { version = "0.19.0", features = ["async"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.14.0"
thiserror = "2.0.3"
tokio = { version = "1", features = ["process", "macros", "rt", "fs", "sync", "io-util"] }
tracing = "0.1.40"
trajoptlib = { path = "../trajoptlib" }
zip = { version = "2.2.0", default-features = false }
