[package]
name = "choreo-core"
version = "2025.0.3"
edition = "2021"
homepage = "https://github.com/SleipnirGroup/Choreo"
repository = "https://github.com/SleipnirGroup/Choreo.git"
authors = ["Sleipnir Group"]
license = "BSD-3-Clause"

[dependencies]
dashmap = "6.1.0"
fastrand = "2.3.0"
futures-util = "0.3.31"
ipc-channel = { version = "0.20.0", features = ["async"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1", features = ["process", "macros", "rt", "fs", "sync", "io-util"] }
tracing = "0.1.41"
trajoptlib = { path = "../trajoptlib" }
zip = { version = "4.0.0", default-features = false }
