[package]
name = "choreo-core"
version = "2026.0.1"
edition = "2024"
homepage = "https://github.com/SleipnirGroup/Choreo"
repository = "https://github.com/SleipnirGroup/Choreo.git"
authors = ["Sleipnir Group"]
license = "BSD-3-Clause"

[dependencies]
dashmap = "6.1.0"
fastrand = "2.3.0"
futures-util = "0.3.31"
ipc-channel = { version = "0.20.2", features = ["async"] }
regex = "1.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.24.0"
thiserror = "2.0.17"
tokio = { version = "1", features = ["process", "macros", "rt", "fs", "sync", "io-util"] }
tracing = "0.1.44"
trajoptlib = { path = "../trajoptlib" }
zip = { version = "7.0.0", default-features = false }
