[package]
name = "choreo"
version = "2025.0.3-carrotchaos"
edition = "2021"
description = """\
  A graphical tool for planning time-optimized trajectories for autonomous \
  mobile robots in the FIRST Robotics Competition.\
  """
readme = "../README.md"
homepage = "https://github.com/SleipnirGroup/Choreo"
repository = "https://github.com/SleipnirGroup/Choreo.git"
authors = ["Sleipnir Group"]
license = "BSD-3-Clause"

[build-dependencies]
built = { version = "0.8.0", features = ["chrono"] }
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
choreo-core = { path = "../src-core" }
current_platform = "0.2.0"
dirs = "6.0.0"
nu-ansi-term = "0.50.1"
open = "5.3.2"
regex = "1.11.1"
serde = "1.0"
serde_json = "1.0"
tauri = { version = "2.8.5", features = [ "devtools"] }
tauri-plugin-dialog = "2.3.3"
tauri-plugin-fs = "2.4.2"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["ansi", "fmt", "std"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
