[package]
name = "choreo"
version = "2025.0.3"
edition = "2021"
description = """\
  A graphical tool for planning time-optimized trajectories for autonomous \
  mobile robots in the FIRST Robotics Competition.\
  """
readme = "../README.md"
homepage = "https://github.com/SleipnirGroup/Choreo"
repository = "https://github.com/SleipnirGroup/Choreo.git"
authors = ["Sleipnir Group"]
license = "BSD-3-Clause"

[build-dependencies]
built = { version = "0.8.0", features = ["chrono"] }
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
choreo-core = { path = "../src-core" }
current_platform = "0.2.0"
dirs = "6.0.0"
nu-ansi-term = "0.50.3"
open = "5.3.2"
regex = "1.12.2"
serde = "1.0"
serde_json = "1.0"
tauri = { version = "2.9.0", features = [ "devtools"] }
tauri-plugin-dialog = "2.4.0"
tauri-plugin-fs = "2.4.2"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["ansi", "fmt", "std"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
