[package]
name = "choreo"
version = "2026.0.0-beta.1"
edition = "2024"
description = """\
  A graphical tool for planning time-optimized trajectories for autonomous \
  mobile robots in the FIRST Robotics Competition.\
  """
readme = "../README.md"
homepage = "https://github.com/SleipnirGroup/Choreo"
repository = "https://github.com/SleipnirGroup/Choreo.git"
authors = ["Sleipnir Group"]
license = "BSD-3-Clause"

[build-dependencies]
built = { version = "0.8.0", features = ["chrono"] }
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
base64 = "0.22.1"
choreo-core = { path = "../src-core" }
current_platform = "0.2.0"
dirs = "6.0.0"
image = "0.25.9"
nu-ansi-term = "0.50.3"
open = "5.3.3"
pathdiff = "0.2.3"
regex = "1.12.2"
serde = "1.0"
serde_json = "1.0"
tauri = { version = "2.9.5", features = [ "devtools"] }
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["ansi", "fmt", "std"] }
urlencoding = "2.1.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
